Select list of courses

--- a/app/views/pages/index.slim
+++ b/app/views/pages/index.slim
@@ -3,4 +3,8 @@ h1 Welcome to Stuck in UoB
 p The schedule smasher below will help you make the perfect schedule.
 p Start by picking the courses you'd like to take:
 
+select name="course"
+  - @courses.each do |course|
+    option = course.title
+
 p We update the schedule with the UoB site directly every 6 hours, so you're always looking at the latest section information. No one likes a schedule checker that's stale! 👃
