full width search bar

--- a/app/views/pages/index.slim
+++ b/app/views/pages/index.slim
@@ -11,7 +11,7 @@ javascript:
   $(function() {
     $('select').chosen({
       no_results_text: 'No course found',
-      width: '350px'
+      width: '100%'
     });
   });
 
